--- a/design/custom.css
+++ b/design/custom.css
@@ -2216,7 +2216,7 @@ body {
     margin: auto;
     display: block;
     margin-left: 15px; } }
-#Body {
+#Body .mui-container {
   padding: 100px; }
 
 #sidenav li a {
@@ -2237,21 +2237,19 @@ html, body {
 
 main {
   min-height: 100%;
-  height: auto !important;
-  /* This line and the next line are not necessary unless you need IE6 support */
-  height: 100%;
-  margin: 0 auto -155px;
-  /* the bottom margin is the negative value of the footer's height */ }
+  /* equal to footer height */
+  margin-bottom: -100px; }
 
-footer, .push {
-  height: 155px;
-  /* .push must be the same height as .footer */ }
+main:after {
+  content: "";
+  display: block; }
 
-/*
+footer, main:after {
+  height: 100px; }
 
-Sticky Footer by Ryan Fait
-http://ryanfait.com/
-
-*/
+footer {
+  height: 100px;
+  padding: 30px;
+  background-color: #2196F3; }
 
 /*# sourceMappingURL=custom.css.map */
