--- a/scss/vanilla/_layout.scss
+++ b/scss/vanilla/_layout.scss
@@ -13,7 +13,10 @@
 }
 
 #Body {
-  padding: 100px;
+
+  .mui-container {
+    padding: 100px;
+  }
 }
 
 // Breadcrumbs
@@ -23,7 +26,7 @@
 }
 
 // Data list
-.DataList:not(:empty)  {
+.DataList:not(:empty) {
   @extend .mui-table;
   @extend .mui-table--bordered;
   @extend .mui-panel;
