Add grunt file instead Adds search bar

--- a/scss/vanilla/_common.scss
+++ b/scss/vanilla/_common.scss
@@ -33,6 +33,10 @@
   .Buttons .Back {
     display: none;
   }
+
+  .InputBox:focus {
+    background: transparent !important;
+  }
 }
 
 // Messages
