--- a/scss/vanilla/_sidedraw.scss
+++ b/scss/vanilla/_sidedraw.scss
@@ -8,7 +8,6 @@ body {
   background-color: #eee;
 }
 
-
 /**
  * Layout CSS
  */
@@ -36,7 +35,7 @@ body {
 #Body {
   min-height: 100%;
   overflow-x: hidden;
-  margin-left: 0px;
+  margin-left: 0;
   transition: margin-left 0.2s;
 
   /* sticky bottom */
@@ -46,7 +45,7 @@ body {
 
 #footer {
   height: 160px;
-  margin-left: 0px;
+  margin-left: 0;
   transition: margin-left 0.2s;
 }
 
@@ -84,14 +83,12 @@ body {
   }
 }
 
-
 /**
  * Toggle Side drawer
  */
 #sidedrawer.active {
   transform: translate(200px);
 }
-
 
 /**
  * Header CSS
@@ -109,11 +106,9 @@ body {
   text-decoration: none;
 }
 
-
 /**
  * Footer CSS
  */
-
 
 #sidedrawer-brand {
   padding-left: 20px;
@@ -124,6 +119,6 @@ body {
 }
 
 #sidedrawer > ul {
-  padding-left: 0px;
+  padding-left: 0;
 }
 
