--- a/scss/vanilla/_common.scss
+++ b/scss/vanilla/_common.scss
@@ -1,5 +1,7 @@
-// Common CSS elements such as buttons
-
+///
+// Material Theme for Vanilla
+// - Common CSS elements such as buttons
+///
 // Buttons
 .Button {
   @extend .mui-btn;
