Fix sidedraw issues

--- a/scss/material.scss
+++ b/scss/material.scss
@@ -11,3 +11,4 @@ $footer-height: 100px;
 @import "vanilla/layout";
 @import "vanilla/footer";
 @import "vanilla/profile";
+@import "vanilla/search";
