--- a/scss/vanilla/_layout.scss
+++ b/scss/vanilla/_layout.scss
@@ -76,6 +76,11 @@ div.Categories {
 #sidedrawer {
   .mui--text-title {
     line-height: $mui-appbar-height;
+
+    img {
+      max-width: 200px;
+      height: auto;
+    }
   }
 }
 #sidenav {
