- Adds custom css override file - Adds circle avatars - Fixes silly cutting due to small width

--- a/scss/material.scss
+++ b/scss/material.scss
@@ -12,3 +12,6 @@ $footer-height: 100px;
 @import "vanilla/footer";
 @import "vanilla/profile";
 @import "vanilla/search";
+
+// Custom changes
+@import "custom";
