--- a/scss/vanilla/_profile.scss
+++ b/scss/vanilla/_profile.scss
@@ -17,3 +17,16 @@
 .FlyoutMenu {
   max-width: 250px;
 }
+
+// Material design-style avatars
+.ProfilePhotoSmall {
+  border-radius: 10px;
+}
+
+.ProfilePhotoMedium {
+  border-radius: 20px;
+}
+
+.ProfilePhotoLarge {
+  border-radius: 80px;
+}
