Fixes profile settings errors

--- a/scss/vanilla/_common.scss
+++ b/scss/vanilla/_common.scss
@@ -29,9 +29,12 @@
 
 // Forms
 .SiteSearch,
-.TextBoxWrapper {
+.TextBoxWrapper,
+form ul li {
   @extend .mui-textfield;
 }
+
+
 
 .FormWrapper {
   @extend .mui-panel;
