--- a/scss/vanilla/_search.scss
+++ b/scss/vanilla/_search.scss
@@ -10,7 +10,7 @@
   }
   
   .Inputbox {
-    border: none;
+    border: 0;
     border-bottom: 1px solid $mui-input-border-color;
     font-size: $mui-input-font-size;
   }
